RESOLVED FIXED297365
[Navigation API] navigate.back doesn't work in main frame when preceded by navigate.back in child frame (part 2)
https://bugs.webkit.org/show_bug.cgi?id=297365
Summary [Navigation API] navigate.back doesn't work in main frame when preceded by na...
rupin
Reported 2025-08-13 15:05:12 PDT
[Navigation API] navigate.back doesn't work in main frame when preceded by navigate.back in child frame (part 2)
Attachments
Radar WebKit Bug Importer
Comment 1 2025-08-13 15:05:26 PDT
rupin
Comment 2 2025-08-13 15:12:22 PDT
EWS
Comment 3 2025-10-06 15:11:37 PDT
Committed 301092@main (b6915afa938b): <https://commits.webkit.org/301092@main> Reviewed commits have been landed. Closing PR #49361 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.